@@ -1,3 +1,8 @@
+2005-01-31  Michael Schlenker <mic42@users.sourceforge.net>
+	* logger.test : Added tests for bug [1102131]. 
+	  The logger servicename can not be detected correctly.
+	  No good fix yet.
+
 2005-01-12  Michael Schlenker <mic42@users.sourceforge.net>
 
 	* logger.tcl : Fixed bug [1099722]. New children did      
